changed "GUEST" heading to "AWAY"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <button id="newGame-btn" onclick="newGame()">New Game</button>
             <div>
-                <h3 class="heading">GUEST</h3>
+                <h3 class="heading">AWAY</h3>
                 <p id="guestscore-el" class="score">0</p>
                 <div class="btn-container border">
                     <button class="btn" id="btn-1-g" onclick="addOneGuest()">+1</button>
